Ajout Ramos Déco

--- a/index.html
+++ b/index.html
@@ -197,15 +197,19 @@
               <div class="context-card">
                 <h6>RamosDéco</h6>
                 <p>
-                  ArgentBank est une application web destinée à être utilisée
-                  par des centaines de milliers d'utilisateurs et permet à
-                  l'utilisateur d'interagir instantanément avec son profil grâce
-                  à la gestion de l'état de l'application.
+                  RamosDéco est un site web que j'ai conçu et développé pour une
+                  entreprise spécialisée dans la peinture en bâtiment. Il s'agit
+                  d'un site qui met en avant les compétences et l'expertise de
+                  l'entreprise dans le domaine de la peinture et des finitions
+                  intérieures et extérieures. À travers une interface élégante
+                  et intuitive, les clients potentiels peuvent facilement
+                  naviguer et découvrir les différents services proposés, ainsi
+                  que consulter les réalisations antérieures de l'entreprise.
                 </p>
               </div>
               <div class="stack-card">
                 <h6>Technologies utilisées</h6>
-                <div class="logos2"></div>
+                <div class="logos10"></div>
               </div>
             </div>
           </div>
